k8s/prod/resources.yaml
---
# API Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-prod
  namespace: models
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-prod
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: api-prod
    spec:
      containers:
        - name: api
          image: gcr.io/project-id/models-rj-sms-api
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
            limits:
              cpu: 1000m
              memory: 4Gi
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
      restartPolicy: Always

---
# Service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-prod
  name: api-prod
  namespace: models
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: api-prod

---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-prod
  namespace: models
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - models-rj-sms.dados.rio
      secretName: models-rj-sms-prod-tls
  rules:
    - host: models-rj-sms.dados.rio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-prod
                port:
                  number: 8080
